--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-aiofiles==0.8.0
-aiogram==2.21
-aiohttp==3.8.1
-aiosignal==1.2.0
-colorama==0.4.4
-keyboard==0.13.5
-mouse==0.7.1
-MouseInfo==0.1.3
-PyAutoGUI==0.9.53
-PyMsgBox==1.0.9
-pywin32==304
-pywin32-ctypes==0.2.0
-requests==2.27.1
-win32-setctime==1.1.0
-tk==0.1.0
-auto-py-to-exe==2.23.1
+aiofiles
+aiogram
+aiohttp
+aiosignal
+colorama
+keyboard
+mouse
+MouseInfo
+PyAutoGUI
+PyMsgBox
+pywin32
+pywin32-ctypes
+requests
+win32-setctime
+tk
+pyautogui
+keyboard
