--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-aiofiles
+aiofiles==23.2.1
 aiogram==2.25.2
-aiohttp
-aiosignal
+aiohttp==3.8.5
+aiosignal==1.3.1
 colorama
-keyboard
-mouse
-MouseInfo
-PyAutoGUI
-PyMsgBox
-pywin32
-pywin32-ctypes
-requests
-win32-setctime
-tk
-pyautogui
-keyboard
+keyboard==0.13.5
+PyAutoGUI==0.9.53
+requests==2.27.1
+tk==0.1.0
